# Simple-Ray-Tracing-Render

./: CMakeLists.txt  LICENSE  README.md
include/hittable/: aabb.h  aarect.h  box.h  bvh.h  constant_medium.h  hittable.h  hittable_list.h  moving_sphere.h  sphere.h
include/utils/: camera.h  color.h  material.h  onb.h  pdf.h  perlin.h  ray.h  rtw_stb_image.h  rtweekend.h  texture.h  vec3.h
src/: main.cpp
